[package]
name = "yakui-miniquad"
version = "0.3.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/profan/yakui-miniquad"
description = "A library integrating yakui with miniquad."
license = "MIT"

keywords = ["gamedev", "graphics", "ui"]
categories = ["gui"]

[dependencies]
miniquad = { version = "0.4.0", default-features = false }
yakui-core = { git = "https://github.com/SecondHalfGames/yakui.git", rev = "7346eb7bc011c95fb82502dacecb92f086389474" }

[dev-dependencies]
macroquad = "0.4.5"
yakui = { git = "https://github.com/SecondHalfGames/yakui.git", rev = "7346eb7bc011c95fb82502dacecb92f086389474" }
